# LZ77AC

./: CMakeLists.txt  LICENSE  PROJECT_STANDARDS.md  PROJECT_STANDARD_IT.md  README.md
doc/: AC.tex  presentazione-finale.pptx
src/: main.c
src/ac/: ac_decoding.c  ac_decoding.h  ac_encoding.c  ac_encoding.h  element.c  element.h
src/lz77/: lz77.c  lz77.h
src/lz77/cmp/: clog.c  clog.h  enc.c  enc.h
src/lz77/dec/: dec.c  dec.h  dlog.c  dlog.h
src/tools/: circular_buffer.c  circular_buffer.h  cmdef.h  fifo.c  fifo.h  file.c  file.h  utility.c  utility.h
src/tools/bitfile/: bitfilereader.c  bitfilereader.h  bitfilewriter.c  bitfilewriter.h  test.c
src/tools/bytestr/: bytestr.c  bytestr.h
src/tools/cb/: fifo.c  fifo.h
src/tools/charcb/: charcb.c  charcb.h
src/tools/charcb/cb/: cibuff.c  cibuff.h  doc.txt  test.c
src/tools/charcb/cb/old/: cibuffo.c  cibuffo.h
src/tools/file/: file.c  file.h
src/tools/kmp/: kmp.c  kmp.h  kmplog.c  kmplog.h  kmpsearch.c  kmpsearch.h  test.c
src/tools/kmp/old/: kmpsearch.c  kmpsearch.h
src/tools/scharcb/: scharcb.c  scharcb.h
test/: simple  simple2
