cmake_minimum_required(VERSION 3.8)
project(LZ77AC)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
set(SOURCE_FILES src/main.c src/lz77/lz77.c src/lz77/lz77.h src/tools/file/file.c src/tools/file/file.h src/tools/charcb/cb/cibuff.c src/tools/charcb/cb/cibuff.h src/tools/cmdef.h src/tools/bytestr/bytestr.c src/tools/bytestr/bytestr.h src/tools/bitfile/bitfilewriter.h src/tools/bitfile/bitfilewriter.c src/tools/bitfile/bitfilereader.c src/tools/bitfile/bitfilereader.h src/lz77/dec/dec.c src/lz77/dec/dec.h src/lz77/cmp/enc.c src/lz77/cmp/enc.h src/lz77/dec/dlog.c src/lz77/cmp/clog.c src/lz77/cmp/clog.h src/lz77/dec/dlog.h src/tools/utility.c src/tools/utility.h src/tools/kmp/kmp.c src/tools/kmp/kmp.h src/tools/kmp/kmplog.c src/tools/kmp/kmplog.h src/tools/scharcb/scharcb.c src/tools/scharcb/scharcb.h src/ac/ac_encoding.h src/ac/ac_encoding.c src/ac/element.c src/ac/element.h src/ac/ac_decoding.c src/ac/ac_decoding.h)
add_executable(LZ77AC ${SOURCE_FILES})
if(CMAKE_BUILD_TYPE MATCHES Debug)
    add_definitions(-DDEBUG_FILE_PRINT=0)
endif()
